--- a/ProyectoFinalAplicadaI/App.config
+++ b/ProyectoFinalAplicadaI/App.config
@@ -9,7 +9,7 @@
   <connectionStrings>
     <add name ="ConStr"
      connectionString="Data Source=DESKTOP-GGBRR44;
-     Initial Catalog= ProyectoFinalAplicadaI4; Integrated Security=true"
+     Initial Catalog= RegistroAnalisisMedico; Integrated Security=true"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
 
